--- a/related_works.tex
+++ b/related_works.tex
@@ -17,7 +17,7 @@ but is not caused by a single bottleneck in one of its components.
 
 The solutions to alleviate I/O contention between concurrently
 running jobs have been proposed in several recent works.
-Lofstead et al. individually schedule each application's I/O requests without
+Lofstead et al. propose to individually schedule each application's I/O requests without
 a global view from the system's perspective \cite{lofstead:sc:2010}.
 Their solutions require the support from the specific I/O management
 in the system level to achieve good results.
@@ -38,7 +38,8 @@ Based on the possible usage cases of burst buffer, the execution of user jobs is
 The user jobs request different resources in each phase.
 We propose a new batch scheduler with burst buffer awareness, Cerberus,
 making scheduling decisions for jobs in each specific phase.
-Cerberus is also integrated with different optimization algorithms for the objectives of maximizing the resource utilization and the system throughput.
+We also integrate Cerberus with different optimization algorithms for the
+objectives of maximizing the resource utilization and the system throughput.
 
 
 % \cite{SlurmBBGuide}
