--- a/conclusion.tex
+++ b/conclusion.tex
@@ -10,7 +10,7 @@
 
 In this study, we have presented Cerberus, a three-phase burst-buffer-aware scheduling design.
 Our key contributions include a three-phase job model to describe user jobs
-and new optimization based methods for job scheduling at each phase.
+and new optimization-based job scheduling at each phase.
 An event driven scheduling simulator named BBSim is developed for examining
 Cerberus on burst buffer enabled systems, which is freely available for the community.
 Our extensive trace based simulations demonstrate that
